Bug 13338 - possible infinite recursion for process wildcard
Summary: possible infinite recursion for process wildcard
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-24 16:25 UTC by Frank Ch. Eigler
Modified: 2011-11-02 00:11 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2011-10-24 16:25:04 UTC
stap -l 'process("/usr/bin/?").mark("*")' loops in an infinite recursion,
because /usr/bin/[ matches the wildcard, yet itself contains a wildcard
character.
Comment 1 Frank Ch. Eigler 2011-11-02 00:11:31 UTC
commit 5750ecc